Fix sidebar visibility and JS conflicts

--- a/style/careerPlan.css
+++ b/style/careerPlan.css
@@ -82,7 +82,7 @@
     gap: 6px;
 }
 
-@media screen and (min-width: 960px) {
+@media screen and (min-width: 500px) {
     .sidebar-hotspot{
         position: fixed;
         top: 0;
